doc: Add State-action value function definition section and related image file.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
@@ -188,11 +188,12 @@
     "### Policy Examples (Rover)\n",
     "\n",
     "A policy defines a decision for every possible state:\n",
-    "* *Example Policy:*\n",
-    "    * If in State 2, go **Left**.\n",
-    "    * If in State 3, go **Left**.\n",
-    "    * If in State 4, go **Left**.\n",
-    "    * If in State 5, go **Right**.\n",
+    "\n",
+    "*Example Policy:*\n",
+    "* If in State 2, go **Left**.\n",
+    "* If in State 3, go **Left**.\n",
+    "* If in State 4, go **Left**.\n",
+    "* If in State 5, go **Right**.\n",
     "\n",
     "The algorithm must explore and learn to define the best action for every state to maximize the cumulative rewards."
    ]
@@ -228,10 +229,11 @@
     "\n",
     "### The Formalism: Markov Decision Process (MDP)\n",
     "\n",
-    "The entire framework comprising the states, actions, transitions, and rewards is known as a **Markov Decision Process (MDP)**. The Markov term means that the future only depends on the current state and action, and not on the history of states or actions that led to the current state. The MDP describes the interaction between the **Agent** and the **Environment** \n",
+    "The entire framework comprising the states, actions, transitions, and rewards is known as a **Markov Decision Process (MDP)**. The Markov term means that the future only depends on the current state and action, and not on the history of states or actions that led to the current state.  \n",
     "\n",
     "<img src='images/rl.png' width=500px>\n",
     "\n",
+    "The MDP describes the interaction between the **Agent** and the **Environment**:\n",
     "1.  The Agent uses the **Policy ($\\pi$)** to choose an **Action ($\\mathbf{A}$)**.\n",
     "2.  The Action changes the **Environment**.\n",
     "3.  The Environment returns a new **State ($\\mathbf{S'}$)** and a **Reward ($\\mathbf{R}$)**.\n",
@@ -244,6 +246,52 @@
   {
    "cell_type": "markdown",
    "id": "430fedf5",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a01b7e0",
+   "metadata": {},
+   "source": [
+    "## State-action value function definition\n",
+    "\n",
+    "This section introduces the final foundational concept needed for reinforcement learning algorithms: the **State-Action Value Function**, also known as the **Q-Function**.\n",
+    "\n",
+    "### Definition of the Q-Function\n",
+    "\n",
+    "The Q-Function is denoted by $Q(s, a)$. It gives a single number representing the expected total Return (discounted sum of future rewards) under a specific condition. $Q(s, a)$ is the Return you get if you **start in state $s$**, **take action $a$** just once, and then **behave optimally thereafter** (i.e., follow the optimal policy, $\\pi^*$). \n",
+    "\n",
+    "### The Relationship to Optimal Policy ($\\pi^*$)\n",
+    "\n",
+    "The initial definition is acknowledged as being slightly circular, as it requires knowledge of the \"optimal behavior\" to calculate $Q(s, a)$. Reinforcement learning algorithms resolve this by using techniques (like dynamic programming or temporal difference learning) to compute the $Q$-function *before* the optimal policy is known.\n",
+    "\n",
+    "### Using the Q-Function to Find the Optimal Action\n",
+    "\n",
+    "The Q-Function provides a direct way to find the optimal action to take in any state. The best possible Return an agent can get from state $s$ is the largest value of $Q(s, a)$ across all available actions $a$.\n",
+    "    \n",
+    "$$\\max_a Q(s, a)$$\n",
+    "\n",
+    "The optimal policy, $\\pi^*(s)$, simply chooses the action $a$ that maximizes $Q(s, a)$.\n",
+    "\n",
+    "$$\\pi^*(s) = \\underset{a}{\\operatorname{argmax}} \\ Q(s, a)$$\n",
+    "\n",
+    "### Example (Mars Rover, $\\gamma=0.5$)\n",
+    "\n",
+    "For the Mars Rover example, if $Q(S_4, \\text{Left}) = 12.5$ and $Q(S_4, \\text{Right}) = 10$:\n",
+    "* The highest possible return from $S_4$ is $12.5$.\n",
+    "* The optimal action in $S_4$ is **Go Left**, because that action yields the higher Q-value.\n",
+    "\n",
+    "<img src='images/Q-function.png' width='600px'>\n",
+    "\n",
+    "**Conclusion:** If an RL algorithm can successfully compute the $Q$-function for every state and every action, it has effectively solved the problem, as the optimal policy can be derived immediately by simply choosing the action with the highest Q-value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25e03fbc",
    "metadata": {},
    "source": []
   }
