doc: Add Bellam Equation section.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
@@ -293,6 +293,60 @@
    "cell_type": "markdown",
    "id": "25e03fbc",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24d17dad",
+   "metadata": {},
+   "source": [
+    "## Bellman Equation\n",
+    "\n",
+    "This section introduces the **Bellman Equation**, the fundamental formula used in Reinforcement Learning (RL) to compute the **State-Action Value Function, $Q(s, a)$**.\n",
+    "\n",
+    "### The Goal and Definition\n",
+    "\n",
+    "The Bellman Equation is the key mathematical tool used to compute the $Q(s, a)$ values, which in turn are used to determine the optimal policy ($\\pi^*$). $Q(s, a)$ is the return if you start in state $s$, take action $a$ once, and then behave optimally afterward.\n",
+    "\n",
+    "### The Bellman Equation Formula\n",
+    "\n",
+    "The equation expresses the $Q(s, a)$ value recursively, breaking the total return into two parts: the immediate reward and the discounted optimal future return.\n",
+    "\n",
+    "$$\\mathbf{Q(s, a)} = \\mathbf{R(s)} + \\gamma \\cdot \\max_{a'} Q(s', a')$$\n",
+    "\n",
+    "Where:\n",
+    "* **$s$:** The current state.\n",
+    "* **$a$:** The current action taken.\n",
+    "* **$R(s)$:** The immediate reward received in state $s$.\n",
+    "* **$\\gamma$ (Gamma):** The discount factor.\n",
+    "* **$s'$:** The next state reached after taking action $a$ from state $s$.\n",
+    "* **$\\max_{a'} Q(s', a')$:** The maximum possible return obtainable from the *next* state, $s'$, by choosing the best possible subsequent action, $a'$.\n",
+    "\n",
+    "### Intuition and Breakdown\n",
+    "\n",
+    "The Bellman Equation formalizes the decomposition of the total Return:\n",
+    "\n",
+    "1.  **Immediate Reward ($R(s)$):** This is the reward you get right away at the first step.\n",
+    "2.  **Discounted Future Return ($\\gamma \\cdot \\max_{a'} Q(s', a')$):** This is the value of the best possible return you can expect from the *next* state, $s'$, discounted by $\\gamma$.\n",
+    "\n",
+    "The value of taking an action now is equal to the reward you get now, plus the discounted value of the optimal returns you can expect from the state you land in next.\n",
+    "\n",
+    "### Edge Cases\n",
+    "\n",
+    "If $s$ is a terminal state (where the process ends), the Bellman Equation simplifies to $$Q(s, a) = R(s)$$ because there is no next state ($s'$), and therefore no future return.\n",
+    "\n",
+    "### Next Steps\n",
+    "\n",
+    "* Once this equation is defined, RL algorithms can be developed to iteratively solve or learn the $Q(s, a)$ values for all states and actions, despite the initial circular nature of the $Q$-function's definition.\n",
+    "* The next section covers a topic on **Stochastic Markov Decision Processes**, where actions have random effects, before developing the first RL algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef7ca938",
+   "metadata": {},
    "source": []
   }
  ],
