doc: Add Random (stochastic) environment section.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
@@ -347,6 +347,55 @@
    "cell_type": "markdown",
    "id": "ef7ca938",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60310300",
+   "metadata": {},
+   "source": [
+    "## Random (stochastic) environment\n",
+    "\n",
+    "This section introduces the concept of a **Stochastic Markov Decision Process (MDP)**, which generalizes the standard RL framework to environments where actions are not perfectly reliable (i.e., the outcome is random).\n",
+    "\n",
+    "### Stochastic Environment\n",
+    "\n",
+    "A stochastic environment is one where, when the agent takes an action, the next state ($s'$) is not guaranteed but is instead random or probabilistic.\n",
+    "\n",
+    "For example, if a Mars Rover is commanded to \"Go Left,\" there might be:\n",
+    "* **90% Chance** of moving left to the expected state ($s'$).\n",
+    "* **10% Chance** of slipping and moving right to a different state ($s''$).\n",
+    "\n",
+    "### The Goal: Expected Return\n",
+    "\n",
+    "Because the sequence of rewards is now random, the goal is no longer to maximize a fixed return, but to maximize the **Expected Return**, which is the average value of the sum of discounted rewards if the agent were to try the same policy a very large number of times (e.g., a million times). The policy ($\\pi$) must be chosen to maximize the average sum of discounted rewards:\n",
+    "\n",
+    "$$\\max_{\\pi} E \\left[ R_1 + \\gamma R_2 + \\gamma^2 R_3 + \\dots \\right]$$\n",
+    "\n",
+    "### Modification to the Bellman Equation\n",
+    "\n",
+    "The introduction of stochasticity modifies the Bellman Equation by adding an Expected Value ($E$) operator to the future return term:\n",
+    "\n",
+    "$$Q(s, a) = R(s) + \\gamma \\cdot E \\left[ \\max_{a'} Q(s', a') \\right]$$\n",
+    "\n",
+    "The total return is the immediate reward $R(s)$ plus the discount factor $\\gamma$ times the expected optimal return from the next state. This accounts for the uncertainty in where the agent will land after taking action $a$.\n",
+    "\n",
+    "### Practical Impact\n",
+    "\n",
+    "* **Lower Returns:** Stochastic environments are harder to control. When the probability of a misstep increases, the maximum possible $Q$-values (and thus the optimal expected return) for the agent decrease because control is less reliable.\n",
+    "* **Generalization:** This framework applies to almost all real-world RL problems where perfect control is impossible due to external factors (wind, terrain, complex game dynamics, etc.).\n",
+    "\n",
+    "### Next Step\n",
+    "\n",
+    "The core RL concepts (including the MDP, Return, Policy, Q-Function, and Bellman Equation) will now be generalized to handle much larger and **continuous state spaces**, which are common in practical applications."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84cdfe6d",
+   "metadata": {},
    "source": []
   }
  ],
