doc: Add 'Example of continuous state space application' section.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
@@ -396,6 +396,56 @@
    "cell_type": "markdown",
    "id": "84cdfe6d",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2996598a",
+   "metadata": {},
+   "source": [
+    "## Example of continuous state space application\n",
+    "\n",
+    "This section explains the concept of **Continuous State Spaces** in Reinforcement Learning (RL), which is necessary to model real-world problems where the environment's state is not limited to a small, discrete number of values.\n",
+    "\n",
+    "### Defining Continuous State Spaces\n",
+    "\n",
+    "In simplified examples (like the Mars Rover), the state space is discrete, meaning the agent can only be in one of a small, finite set of positions (e.g., $S_1, S_2, \\dots, S_6$). In real-world applications (like robotics or vehicle control), the state is defined by real numbers that can take on any value within a range. The state is represented not by a single integer, but by a vector of continuous numbers.\n",
+    "\n",
+    "### Example: Autonomous Car/Truck\n",
+    "\n",
+    "For a self-driving vehicle, the state is a vector comprising at least six continuous numbers:\n",
+    "\n",
+    "| State Variable | Description |\n",
+    "| :--- | :--- |\n",
+    "| **Position** | $x$ (horizontal), $y$ (vertical) coordinates. |\n",
+    "| **Orientation** | $\\Theta$ (angle, or heading, ranging 0 to $360^\\circ$). |\n",
+    "| **Velocity** | $\\dot{x}$ (speed in the $x$ direction), $\\dot{y}$ (speed in the $y$ direction). |\n",
+    "| **Angular Velocity** | $\\dot{\\Theta}$ (how fast the car is turning). |\n",
+    "| **Result:** | The policy takes this 6-number vector as input. |\n",
+    "\n",
+    "### Example: Autonomous Helicopter\n",
+    "\n",
+    "For a complex aerial robot, the state vector is much larger, comprising at least 12 continuous numbers:\n",
+    "\n",
+    "| State Variable | Description |\n",
+    "| :--- | :--- |\n",
+    "| **Position** | $x, y, z$ (North/South, East/West, Height). |\n",
+    "| **Orientation** | $\\Phi, \\Theta, \\Psi$ (Roll, Pitch, Yaw). |\n",
+    "| **Linear Velocity** | $\\dot{x}, \\dot{y}, \\dot{z}$ (Rate of change for each position coordinate). |\n",
+    "| **Angular Velocity** | $\\dot{\\Phi}, \\dot{\\Theta}, \\dot{\\Psi}$ (Rate of change for Roll, Pitch, Yaw). |\n",
+    "| **Result:** | The policy takes this 12-number vector as input. |\n",
+    "\n",
+    "### Generalization\n",
+    "\n",
+    "The RL framework generalizes by replacing the simple, discrete state number (e.g., $S=4$) with a high-dimensional vector of continuous values. This continuous state space formalism is used for many complex control problems, including the Lunar Lander simulation that the user will work on in the practice lab."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a23b691b",
+   "metadata": {},
    "source": []
   }
  ],
