doc: Add 'Learning the state-action function'.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
@@ -446,6 +446,62 @@
    "cell_type": "markdown",
    "id": "a23b691b",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4eede481",
+   "metadata": {},
+   "source": [
+    "## Learning the state-action function\n",
+    "\n",
+    "This section explains the methodology for applying Reinforcement Learning (RL) to problems with continuous state spaces, like the lunar lander, using a technique called **Deep Q-Networks (DQN)**. The core idea is to train a neural network to approximate the $Q$-function using supervised learning principles derived from the Bellman Equation.\n",
+    "\n",
+    "### The Q-Network Architecture\n",
+    "\n",
+    "The goal here is to train a Neural Network (NN) to compute the State-Action Value Function, $Q(s, a)$. The input ($\\mathbf{X}$) to the NN is a concatenated vector of the current State ($s$) and the Action ($a$).\n",
+    "\n",
+    "* *Example (Lunar Lander):* The state is 8 continuous numbers (position, velocity, orientation, etc.). The action (one of 4 discrete choices: nothing, left, main, right) is encoded using a 4-number one-hot vector. Total input features is 12 (8 State + 4 Action). The NN has a single output unit ($\\mathbf{Y}$) that predicts the value of $Q(s, a)$.\n",
+    "\n",
+    "### Creating the Training Data\n",
+    "\n",
+    "The algorithm generates a dataset of $(\\mathbf{X}, \\mathbf{Y})$ pairs from the agent's experience, leveraging the Bellman Equation to define the target value $\\mathbf{Y}$.\n",
+    "\n",
+    "* **Experience Collection:** The agent takes various actions (randomly or using a developing policy) in the environment, generating **tuples of experience**:\n",
+    "    \n",
+    "    $$\\mathbf{(s, a, R(s), s')} : \\text{(Current State, Action Taken, Immediate Reward, Next State)}$$\n",
+    "    \n",
+    "* **Replay Buffer:** To manage memory and decorrelate training examples, the algorithm stores only the $N$ most recent experience tuples (e.g., 10,000 tuples) in a temporary memory called the **Replay Buffer**.\n",
+    "* **Defining the Target Value ($\\mathbf{Y}$):** For each experience tuple, the target value $\\mathbf{Y}$ is computed using the right-hand side of the Bellman Equation:\n",
+    "\n",
+    "    $$\\mathbf{Y} = R(s) + \\gamma \\cdot \\max_{a'} Q(s', a')$$\n",
+    "\n",
+    "    Where $Q(s', a')$ is obtained from the **current, evolving neural network's estimate**. (Initially, this is a random guess, but it improves over time).\n",
+    "* **Defining the Input ($\\mathbf{X}$):** The input is the state-action pair from the tuple: $\\mathbf{X} = (s, a)$.\n",
+    "\n",
+    "### The Deep Q-Network (DQN) Algorithm\n",
+    "\n",
+    "The full DQN process uses an iterative cycle of experience and supervised learning:\n",
+    "\n",
+    "1.  **Initialize:** Randomly initialize the parameters of the Q-Network.\n",
+    "2.  **Act and Collect:** Repeatedly take actions in the environment, observing $(\\mathbf{s}, \\mathbf{a}, \\mathbf{R(s)}, \\mathbf{s'})$ tuples and storing them in the Replay Buffer.\n",
+    "3.  **Train:** Periodically generate a training set of $(\\mathbf{X}, \\mathbf{Y})$ pairs from the Replay Buffer using the Bellman Equation to calculate $\\mathbf{Y}$.\n",
+    "4.  **Update:** Train the neural network using standard supervised learning techniques (e.g., Mean Squared Error loss) to approximate $\\mathbf{X} \\to \\mathbf{Y}$. This produces a **new, improved** Q-Network ($Q_{new}$).\n",
+    "5.  **Iterate:** Replace the old Q-Network ($Q$) with the new one ($Q_{new}$). The improved Q-Network provides a better estimate for calculating the target $Y$ in the next training cycle.\n",
+    "\n",
+    "### Policy Derivation\n",
+    "\n",
+    "Once the Q-Network is trained, the agent determines the optimal action in any state $s$ by using the network to predict $Q(s, a)$ for all possible actions $a$, and then choosing the action with the **highest predicted Q-value**.\n",
+    "    \n",
+    "$$\\pi^*(s) = \\underset{a}{\\operatorname{argmax}}\\ Q(s, a)$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6282cb41",
+   "metadata": {},
    "source": []
   }
  ],
