doc: Add 'Algorithm refinement: Improved neural netwrok architecture' section.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
@@ -502,6 +502,45 @@
    "cell_type": "markdown",
    "id": "6282cb41",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e851f18",
+   "metadata": {},
+   "source": [
+    "## Algorithm refinement: Improved neural netwrok architecture\n",
+    "\n",
+    "This section describes a key architectural change to the Deep Q-Network (DQN) that makes the reinforcement learning algorithm significantly more efficient: using a single neural network to output the Q-values for all possible actions simultaneously.\n",
+    "\n",
+    "### Inefficient Architecture (Previous)\n",
+    "\n",
+    "The previous Q-Network took both the State ($s$) and the Action ($a$) as input. To decide the best action in a given state $s$, the agent had to run the entire neural network inference separately for every single action to calculate all $Q(s, a)$ values.\n",
+    "\n",
+    "### Efficient Architecture (Single Network Output)\n",
+    "\n",
+    "The revised, more efficient neural network only takes the State ($s$) as input. The single network is trained to have **multiple output units**—one for every possible action.\n",
+    "\n",
+    "*Example (Lunar Lander):* The network has four output units, which simultaneously predict:\n",
+    "    \n",
+    "$$[Q(s, \\text{Nothing}), Q(s, \\text{Left}), Q(s, \\text{Main}), Q(s, \\text{Right})]$$\n",
+    "\n",
+    "### Benefits of the New Architecture\n",
+    "\n",
+    "* **Efficiency and Speed:** Given a state $s$, the algorithm runs neural network inference only once to get all $Q(s, a)$ values, making the process of picking an action much faster.\n",
+    "* **Simplified calculation of Bellman equation:** This architecture also speeds up the calculation of the target value **$Y$** using the Bellman Equation (which requires finding $\\max_{a'} Q(s', a')$), as all necessary Q-values for the next state $s'$ are generated simultaneously.\n",
+    "\n",
+    "### Next Step\n",
+    "\n",
+    "The next concept introduced is the **Epsilon-Greedy Policy**, which is a crucial refinement to the DQN algorithm that governs how the agent selects actions while learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d761311",
+   "metadata": {},
    "source": []
   }
  ],
