doc: Add 'Algorithm refienment: Epsilo-greedy policy' section.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
@@ -541,6 +541,51 @@
    "cell_type": "markdown",
    "id": "2d761311",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01e5fd17",
+   "metadata": {},
+   "source": [
+    "## Algorithm refienment: $\\epsilon$-greedy policy\n",
+    "\n",
+    "This section explains the **Epsilon-Greedy Policy**, a crucial technique used during the training phase of Deep Q-Networks (DQN) to balance the need to **exploit** current knowledge with the need to **explore** new possibilities.\n",
+    "\n",
+    "### The Core Dilemma (Exploration vs. Exploitation)\n",
+    "\n",
+    "During training, the Q-Function ($Q(s, a)$) is constantly being approximated and is initially inaccurate. The agent must decide whether to:\n",
+    "1.  **Exploit:** Use its current, imperfect knowledge to choose the best-known action.\n",
+    "2.  **Explore:** Take a random action to potentially discover better strategies or avoid being \"stuck\" in a suboptimal belief.\n",
+    "\n",
+    "If the neural network is randomly initialized to believe a crucial action (e.g., firing the main thruster) is bad, the agent will never try it and thus will never learn its true high Q-value.\n",
+    "\n",
+    "### The Epsilon-Greedy Policy Mechanism\n",
+    "\n",
+    "The Epsilon-Greedy Policy introduces a simple mechanism to balance this trade-off using a small probability value, $\\epsilon$ (epsilon):\n",
+    "\n",
+    "| Scenario | Action Taken | Probability | Terminology |\n",
+    "| :--- | :--- | :--- | :--- |\n",
+    "| **Greedy Action** | Choose the action $a$ that maximizes the current $Q(s, a)$. | $1 - \\epsilon$ (e.g., 95% of the time) | **Exploitation** |\n",
+    "| **Random Action** | Choose an action $a$ entirely at random. | $\\epsilon$ (e.g., 5% of the time) | **Exploration** |\n",
+    "\n",
+    "### Implementing $\\epsilon$ Decay\n",
+    "\n",
+    "* **Initial Stage (High $\\epsilon$):** It is common practice to start with a high $\\epsilon$ (e.g., $\\epsilon = 1.0$), meaning the agent takes actions almost entirely at random initially. This quickly gathers diverse experience.\n",
+    "* **Later Stage (Low $\\epsilon$):** $\\epsilon$ is then gradually decreased over time (e.g., down to $0.01$). As the Q-Function estimate improves, the agent shifts from exploring to relying on (exploiting) its learned knowledge.\n",
+    "\n",
+    "### General Observations on RL Algorithms\n",
+    "\n",
+    "* **Fickle Nature:** Reinforcement Learning algorithms are generally more **finicky** and sensitive to hyperparameter choices (like $\\epsilon$) than supervised learning algorithms.\n",
+    "* **Parameter Sensitivity:** Setting parameters poorly can lead to learning taking 10 to 100 times longer, highlighting the critical role of careful tuning in RL."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d934688",
+   "metadata": {},
    "source": []
   }
  ],
