doc: Add 'Algorithm refinement: Mini-Batch and soft-updates' section.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
@@ -586,6 +586,47 @@
    "cell_type": "markdown",
    "id": "2d934688",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7da5912b",
+   "metadata": {},
+   "source": [
+    "## Algorithm refinement: Mini-Batch and soft-updates\n",
+    "\n",
+    "This section outlines two final and crucial refinements to the Deep Q-Network (DQN) algorithm: **Mini-Batching** and **Soft Updates**, which significantly improve the algorithm's speed and reliability.\n",
+    "\n",
+    "### Mini-Batching for Efficiency\n",
+    "\n",
+    "In traditional supervised learning, if the dataset is huge (e.g., $m = 100$ million examples), computing the gradient requires summing the error over *all* $m$ examples. This is computationally expensive and slow for every single update step.\n",
+    "\n",
+    "Instead of using the full dataset, the algorithm uses a small subset of the data, a **mini-batch** (e.g., $m' = 1,000$ examples), to compute the gradient and update the parameters in each step. Each update is much faster, leading to a much faster overall training process, even if the direction of the update is slightly noisier (less reliable) than using the full batch.\n",
+    "\n",
+    "**Application in DQN:** Even if the Replay Buffer stores a large number of experience tuples (e.g., 10,000), the algorithm uses a much smaller mini-batch size (e.g., 1,000) of these tuples to generate the training set $\\mathbf{(X, Y)}$ and train the Q-Network.\n",
+    "\n",
+    "### Soft Updates for Stability\n",
+    "\n",
+    "* **Problem (Abrupt Updates):** In the basic DQN algorithm, the old Q-Network ($Q$) is completely replaced by the newly trained network ($Q_{new}$), often written as $Q \\leftarrow Q_{new}$. If the new network is accidentally a poor or noisy estimate, this abrupt change can lead to instability, causing the algorithm to oscillate or diverge.\n",
+    "* **Solution (Soft Update):** Instead of completely overwriting the old parameters ($\\mathbf{W}, \\mathbf{B}$), the soft update makes a gradual, weighted change, mixing a small fraction of the new parameters with the old ones. The new weights $\\mathbf{W}$ are updated as:\n",
+    "\n",
+    "$$\\mathbf{W} \\leftarrow \\tau \\mathbf{W}_{new} + (1 - \\tau) \\mathbf{W}_{old}$$\n",
+    "\n",
+    "Where $\\tau$ (tau) is a small hyperparameter, e.g., $\\tau = 0.01$.\n",
+    "\n",
+    "The soft update prevents any single bad update step from drastically changing the Q-Function, causing the reinforcement learning algorithm to converge more reliably to a good solution.\n",
+    "\n",
+    "### Conclusion on RL Algorithms\n",
+    "\n",
+    "Reinforcement Learning algorithms are generally more finicky and difficult to tune than supervised learning algorithms. They require careful selection of parameters (like the discount factor, $\\epsilon$, and mini-batch size) and these structural refinements to work well on challenging tasks like the Lunar Lander.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb81ad0c",
+   "metadata": {},
    "source": []
   }
  ],
