doc: Add table of contents.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
@@ -7,7 +7,22 @@
    "source": [
     "# Week 3: Reinforcement Learning\n",
     "\n",
-    "## Table of Contents"
+    "## Table of Contents\n",
+    "\n",
+    "1. [What is reinforcement learning?](#what-is-reinforcement-learning)  \n",
+    "2. [Mars rover example](#mars-rover-example)  \n",
+    "3. [The return in reinforcement learning](#the-return-in-reinforcement-learning)  \n",
+    "4. [Making decisions: Policies in reinforcement learning](#making-decisions-policies-in-reinforcement-learning)  \n",
+    "5. [Review of key concepts](#review-of-key-concepts)  \n",
+    "6. [State-action value function definition](#state-action-value-function-definition)  \n",
+    "7. [Bellman Equation](#bellman-equation)  \n",
+    "8. [Random (stochastic) environment](#random-stochastic-environment)  \n",
+    "9. [Example of continuous state space application](#example-of-continuous-state-space-application)  \n",
+    "10. [Learning the state-action function](#learning-the-state-action-function)  \n",
+    "11. [Algorithm refinement: Improved neural netwrok architecture](#algorithm-refinement-improved-neural-netwrok-architecture)  \n",
+    "12. [Algorithm refienment: ε-greedy policy](#algorithm-refienment-epsilon-greedy-policy)  \n",
+    "13. [Algorithm refinement: Mini-Batch and soft-updates](#algorithm-refinement-mini-batch-and-soft-updates)  \n",
+    "14. [The state of reinforcement learning](#the-state-of-reinforcement-learning)"
    ]
   },
   {
