--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
@@ -678,6 +678,28 @@
    "cell_type": "markdown",
    "id": "c0cbd809",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "660eca11",
+   "metadata": {},
+   "source": [
+    "### References\n",
+    "\n",
+    "If you would like to learn more about Deep Q-Learning, we recommend you check out the following papers.\n",
+    "\n",
+    "* Mnih, V., Kavukcuoglu, K., Silver, D. et al. Human-level control through deep reinforcement learning. Nature 518, 529–533 (2015).\n",
+    "* Lillicrap, T. P., Hunt, J. J., Pritzel, A., et al. Continuous Control with Deep Reinforcement Learning. ICLR (2016).\n",
+    "* Mnih, V., Kavukcuoglu, K., Silver, D. et al. Playing Atari with Deep Reinforcement Learning. arXiv e-prints. arXiv:1312.5602 (2013)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f539f078",
+   "metadata": {},
    "source": []
   }
  ],
