--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
@@ -22,7 +22,8 @@
     "11. [Algorithm refinement: Improved neural netwrok architecture](#algorithm-refinement-improved-neural-netwrok-architecture)  \n",
     "12. [Algorithm refienment: ε-greedy policy](#algorithm-refienment-epsilon-greedy-policy)  \n",
     "13. [Algorithm refinement: Mini-Batch and soft-updates](#algorithm-refinement-mini-batch-and-soft-updates)  \n",
-    "14. [The state of reinforcement learning](#the-state-of-reinforcement-learning)"
+    "14. [The state of reinforcement learning](#the-state-of-reinforcement-learning)\n",
+    "15. [References](#References)"
    ]
   },
   {
@@ -695,12 +696,6 @@
     "* Lillicrap, T. P., Hunt, J. J., Pritzel, A., et al. Continuous Control with Deep Reinforcement Learning. ICLR (2016).\n",
     "* Mnih, V., Kavukcuoglu, K., Silver, D. et al. Playing Atari with Deep Reinforcement Learning. arXiv e-prints. arXiv:1312.5602 (2013)."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f539f078",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
