doc: Update 'orthogonalization in ML' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "source": [
     "# Week 1: ML Strategy\n",
-    "---\n",
     "\n",
     "Streamline and optimize your ML production workflow by implementing strategic guidelines for goal-setting and applying human-level performance to help define key priorities.\n",
     "Learning Objectives\n",
@@ -21,44 +20,72 @@
   },
   {
    "cell_type": "markdown",
+   "id": "73457187",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "73666143-155c-43c3-b73c-55def1c64551",
    "metadata": {},
    "source": [
-    "### Orthogonalization in ML\n",
+    "## Orthogonalization in ML\n",
     "\n",
     "This section introduces the concept of **orthogonalization** as a strategy for developing effective machine learning systems, advocating for clarity on *what* to tune to achieve a single, specific effect.\n",
     "\n",
-    "---\n",
+    "### Concept of Orthogonalization\n",
     "\n",
-    "#### Concept of Orthogonalization\n",
-    "* **Definition:** Orthogonalization means designing controls (or hyperparameters) so that **each control ideally affects only one specific dimension** of the system's performance.\n",
-    "* **Analogy (Old TV):** A well-designed TV has separate knobs for height, width, rotation, etc. A non-orthogonal knob would change all these aspects simultaneously, making precise tuning nearly impossible.\n",
-    "* **Benefit:** Having orthogonal controls makes the process of **tuning and debugging much easier** because you know exactly which knob to turn when a specific problem is identified.\n",
+    "Orthogonalization means designing controls (or hyperparameters) so that each control ideally affects only one specific dimension of the system's performance.\n",
     "\n",
-    "#### The Four Performance Criteria\n",
+    "For example, a well-designed TV has separate knobs for height, width, rotation, etc. A non-orthogonal knob would change all these aspects simultaneously, making precise tuning nearly impossible.\n",
+    "\n",
+    "Having orthogonal controls makes the process of tuning and debugging much easier because you know exactly which knob to turn when a specific problem is identified.\n",
+    "\n",
+    "### The Four Performance Criteria\n",
+    "\n",
     "For a supervised learning system to perform well, it generally needs to achieve four goals sequentially. Orthogonalization helps by providing a distinct \"knob\" for addressing each potential failure point:\n",
     "\n",
-    "1.  **Fit the Training Set Well (Low Bias):**\n",
-    "    * **Problem:** The algorithm is not performing well on the training data.\n",
-    "    * **Orthogonal Knobs:** Use a **bigger network** (more capacity) or switch to a **better optimization algorithm** (e.g., Adam).\n",
-    "2.  **Fit the Development (Dev) Set Well (Low Variance):**\n",
-    "    * **Problem:** The algorithm fits the training set well but performs poorly on the dev set (overfitting).\n",
-    "    * **Orthogonal Knobs:** Apply **regularization** (to reduce variance) or get a **bigger training set** (to improve generalization).\n",
-    "3.  **Fit the Test Set Well:**\n",
-    "    * **Problem:** Performance is good on the dev set but poor on the test set.\n",
-    "    * **Orthogonal Knob:** Get a **bigger dev set**. This indicates the dev set itself was too small, leading to overfitting the dev set metrics.\n",
-    "4.  **Perform Well in the Real World:**\n",
-    "    * **Problem:** Performance is good on the test set metric, but the system doesn't deliver the desired real-world value.\n",
-    "    * **Orthogonal Knob:** Change the **Dev/Test set distribution** or **change the cost function** because the current metric is not accurately measuring the real-world goal.\n",
+    "#### 1.  Fit the Training Set Well (Low Bias)\n",
     "\n",
-    "#### Example of Non-Orthogonal Control\n",
-    "* **Early Stopping:** This technique is considered **less orthogonal** because it simultaneously affects two criteria:\n",
-    "    1.  It improves dev set performance (reducing variance).\n",
-    "    2.  It reduces training set performance (increasing bias/not fitting training data as well).\n",
-    "* **Preference:** While not a bad technique, using more orthogonal controls makes the system easier to reason about and tune.\n",
+    "* **Problem:** The algorithm is not performing well on the training data.\n",
+    "* **Orthogonal Knobs:** Use a bigger network (more capacity) or switch to a better optimization algorithm (e.g., Adam).\n",
     "\n",
-    "#### Summary\n",
+    "#### 2. Fit the Development Set Well (Low Variance)\n",
+    "\n",
+    "* **Problem:** The algorithm fits the training set well but performs poorly on the dev set (overfitting).\n",
+    "* **Orthogonal Knobs:** Apply regularization (to reduce variance) or get a bigger training set (to improve generalization).\n",
+    "\n",
+    "#### 3. Fit the Test Set Well\n",
+    "\n",
+    "* **Problem:** Performance is good on the dev set but poor on the test set.\n",
+    "* **Orthogonal Knob:** Get a bigger dev set. This indicates the dev set itself was too small, leading to overfitting the dev set metrics.\n",
+    "\n",
+    "#### 4. Perform Well in the Real World\n",
+    "\n",
+    "* **Problem:** Performance is good on the test set metric, but the system doesn't deliver the desired real-world value.\n",
+    "* **Orthogonal Knob:** Change the Dev/Test set distribution or change the cost function because the current metric is not accurately measuring the real-world goal.\n",
+    "\n",
+    "### Example of Non-Orthogonal Control\n",
+    "\n",
+    "**Early Stopping:** This technique is considered less orthogonal because it simultaneously affects two criteria:\n",
+    "1.  It improves dev set performance (reducing variance).\n",
+    "2.  It reduces training set performance (increasing bias/not fitting training data as well).\n",
+    "\n",
+    "While it is not a bad technique, using more orthogonal controls makes the system easier to reason about and tune.\n",
+    "\n",
+    "### Summary\n",
+    "\n",
     "The goal is to diagnose the exact bottleneck in performance (which of the four criteria is failing) and then use a specific, orthogonal set of controls to fix only that problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5c56650",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -276,7 +303,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "DS",
    "language": "python",
    "name": "python3"
   },
@@ -290,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
