--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
@@ -28,6 +28,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c2d4d379",
+   "metadata": {},
+   "source": [
+    "## Table of Contents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c14a6d79",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "73666143-155c-43c3-b73c-55def1c64551",
    "metadata": {},
    "source": [
